# CodeRECAP

./: .gitignore  .gitmodules  .~lock.swebench_predictions.csv#  CodeRECAP.db  LICENSE  Phi-3CookBook.db  README.md  embeddings.csv  pyproject.toml  requirements.txt  swebench_predictions.csv
.github/workflows/: ci.yml  python-app.yml
benchmark/: Data_Collection_And_Formatting.ipynb  Evaluation.ipynb  README.md  evaluate_results.py  get_data.py
project/: .env.gpg  CodeRECAP.db  azureClient.py  benchmark.py  dataset.py  embeddings.csv  evaluation.py  evaluation_config.json  identifyFunctions.py  indexingUtils.py  llmPrompt.py  llmPrompts.py  llmPromt.py  main.py  queryUtils.py  storeFunctions.py  sweBench.ipynb  sweBench.py  swe_bench_like_dataset.csv  swebenchUtils.py  test.py  testing.py  tfidf.py  vectorizeCode.py
tests/: swebench_predictions_first_repo.csv  test.py  test_main.py
